# stereo-fate

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: pipeline.yaml
cookbook/: 01_spatial_domains.ipynb  02_tf_activity_maps.ipynb  03_lr_niche_maps.ipynb  04_recipe.ipynb  05_funcgen_recovery.ipynb  _build_notebooks.py  _pipeline.py
scripts/: make_subsample.py
stereo_fate/: __init__.py  cli.py  communication.py  fate.py  funcgen.py  recipe.py  resources.py  spatial.py  tf_activity.py
stereo_fate/data/: collectri_mouse_subset.csv  perturbation_reference.csv
stereo_fate/io/: __init__.py  loaders.py
tests/: conftest.py  test_io.py  test_pipeline.py  test_resources.py
