[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stereo-fate"
version = "0.1.0"
description = "Nominate the TF + cell-cell-signaling 'ingredients' that drive cell-fate decisions from Stereo-seq spatial transcriptomics, and prioritize them with functional-genomics (perturbation) evidence."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Amit Shenoy" }]
keywords = [
    "spatial-transcriptomics", "stereo-seq", "cell-fate", "transcription-factors",
    "cell-cell-communication", "functional-genomics", "perturb-seq", "scanpy",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "anndata>=0.10",
    "scanpy>=1.10",
    "squidpy>=1.4",
    "decoupler<2",                 # 1.x stable API: dc.get_collectri / dc.run_ulm
    "liana>=1.0",
    "leidenalg>=0.10",
    "igraph>=0.11",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "typer>=0.12",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "psutil>=5.9",
    "pooch>=1.8",                  # documented data downloads with checksums
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Stereo-seq native GEF I/O via BGI's official toolkit. Optional because stereopy
# wheels are fragile on some platforms; the core pipeline runs on .h5ad without it.
stereo = ["stereopy>=1.3"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "jupyter>=1.0", "nbconvert>=7.0"]

[project.scripts]
stereo-fate = "stereo_fate.cli:app"

[project.urls]
Homepage = "https://github.com/xX-its-amit-Xx/stereo-fate"
Repository = "https://github.com/xX-its-amit-Xx/stereo-fate"

[tool.hatch.build.targets.wheel]
packages = ["stereo_fate"]

[tool.hatch.build.targets.wheel.force-include]
"stereo_fate/data/mosta_e95_subsample.h5ad" = "stereo_fate/data/mosta_e95_subsample.h5ad"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
